# CrAKN

./: .gitignore  pyproject.toml  requirements.txt  run.sh
core/: config.json
crakn/: config.py  crakn.py  data.py  graphs.py  plots.py  pretrain.py  train.py  train_all.py  train_crakn.py  train_folder.py  train_jarvis.py  train_matbench.py  train_qm7.py  train_vlm.py  utils.py
crakn/backbones/: cgcnn.py  gcn.py  gnn.py  graphs.py  matformer.py  pdd_helpers.py  pst.py  pst_v2.py  utils.py
crakn/core/: config.py  data.py  graph.py  layers.py  model.py  train.py  transformer_layers.py
crakn/data/: config.json  config_cgcnn.json  config_cgcnn_crakn.json  config_gcn.json  config_gnn.json  config_matformer.json  config_matformer_crakn.json  config_pstv2.json  config_pstv2_crakn.json
