[project]
name = "CrAKN"
version = "0.0.1"
authors = [
  { name="Jonathan Balasingham", email="jonbalasin@gmail.com" },
]
description = "Crystal Attribute Knowledge Graph"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jonathanBalasingham/crakn"
Issues = "https://github.com/jonathanBalasingham/crakn/issues"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line_length = 79


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
script-files = ["crakn/train_all.py"]

[tool.hatch.build]
include = [
  "crakn/data/*.csv",
]